tests/NormalTests/paczka1/fuzzy1/88880825.err
Error in line 10: xgRh A3 70,1
Error in line 21: YYfPDvCO A765 2,3
Error in line 24: YYfPDvCO A938 98,3
Error in line 30: f1X A938 26,5
Error in line 34: xgRh A3 92,6
